--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
     display: flex;
     justify-content: center;
 }
-
+ 
 #div10{
-
+ 
     display: flex;
     justify-content: center;
     margin-top: 5%;
 }
-
-
+ 
+ 
 h4 {
     float: left;
     margin-top: 20px;
@@ -22,7 +22,7 @@ h4 {
     justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+ 
 button {
     margin: 10px;
     padding: 10px 20px;
@@ -30,22 +30,33 @@ button {
     float: left;
     border-radius: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: gainsboro;
 }
-
+ 
 .wynik {
     margin-top: 20px;
     font-size: 20px;
     font-weight: bold;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+   
 }
-
+ 
 #div20{
 display: flex;
 justify-content: center;
-
+ 
 }
-
+ 
 body{
     background-color: whitesmoke;
+}
+ 
+img {
+    width: 200px;
+    transition: transform 0.2s;
+}
+ 
+img:hover{
+ 
+    transform: scale(1.2);
 }
