--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
     float: left;
     border-radius: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: gainsboro;
+    background-color: gray;
 }
  
 .wynik {
